...
                            android:drawableLeft="@drawable/new_card"
                            android:drawablePadding="5dp"
                            android:padding="6sp"
                            android:text="@string/card" />

                        <EditText
                            android:id="@+id/creditCardNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@android:color/white"
                            android:digits="0123456789 "
                            android:hint="@string/cc_hint"
                            android:imeOptions="actionNext"
                            android:inputType="numberDecimal"
                            android:maxLength="19"
                            android:nextFocusDown="@+id/expDateEditText"
                            android:padding="6sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/invaildCreditCardMessageTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPureWhite"
                        android:text="@string/invalid_card_number"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_red_light"
...
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp">

                    <TextView
                        android:id="@+id/expDateLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawableLeft="@drawable/ico_field_calendar"
                        android:drawablePadding="5dp"
                        android:padding="6sp"
...
                    android:text="0" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buyNowButton"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/btn_pay"
...
