...
        android:focusable="true"
        android:focusableInTouchMode="true">

        <requestFocus />

        <ListView
            android:id="@+id/currency_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:paddingRight="5dp" />
...
